--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+8 june 2013
+Added the main daemon. This is the core of the 433.92Mhz
+functionality. It will run in the background and allows
+multiple receiver or senders to connect to it. The daemon
+also has logging ability.
+
 5 june 2013
 Added a learner. Basicly, the learner does the same as the
 debugger, but the learner prints more extensive information.
