[Docs] Updated lm75 and lm76 to new version

--- a/docs/source/protocols/gpio/_lm75.rst
+++ b/docs/source/protocols/gpio/_lm75.rst
@@ -55,7 +55,43 @@
 +------------------+-------------------+
 | **Option**       | **Value**         |
 +------------------+-------------------+
-| id               | *valid i2c path*  |
+| id               | *valid i2c id*    |
++------------------+-------------------+
+| temperature      | -55 - 125         |
++------------------+-------------------+
+
+.. versionchanged:: 8.0
+
+.. code-block:: json
+   :linenos:
+
+   {
+     "devices": {
+       "temperature": {
+         "protocol": [ "lm75" ],
+         "id": [{
+           "id": "0x49",
+           "i2c-path": "/dev/i2c-0"
+         }],
+         "temperature": 17.2
+       }
+     },
+     "gui": {
+       "temperature": {
+         "name": "Temperature Sensor",
+         "group": [ "Misc" ],
+         "media": [ "all" ]
+       }
+     }
+   }
+
+
++------------------+-------------------+
+| **Option**       | **Value**         |
++------------------+-------------------+
+| id               | *valid i2c id*    |
++------------------+-------------------+
+| i2c-path         | *valid i2c path*  |
 +------------------+-------------------+
 | temperature      | -55 - 125         |
 +------------------+-------------------+
