--- a/docs/source/protocols/433.92/switch/x10.rst
+++ b/docs/source/protocols/433.92/switch/x10.rst
@@ -37,7 +37,7 @@ X10
 
    {
      "devices": {
-       "dimmer": {
+       "tvlight": {
          "protocol": [ "x10" ],
          "id": [{
            "id": "A2"
@@ -46,8 +46,8 @@ X10
        }
      },
      "gui": {
-       "Lamp": {
-         "name": "TV Backlit",
+       "tvlight": {
+         "name": "TV Backlight",
          "group": [ "Living" ],
          "media": [ "all" ]
        }
@@ -69,9 +69,9 @@ X10
 +----------------------+-------------+------------+-----------------------------------------------------------+
 | **Setting**          | **Default** | **Format** | **Description**                                           |
 +----------------------+-------------+------------+-----------------------------------------------------------+
-| readonly             | 1           | 1 or 0     | Disable controlling this device from the GUIs             |
+| readonly             | 0           | 0 or 1     | Disable controlling this device from the GUIs             |
 +----------------------+-------------+------------+-----------------------------------------------------------+
-| confirm              | 1           | 1 or 0     | Ask for confirmation when switching device                |
+| confirm              | 0           | 0 or 1     | Ask for confirmation when switching device                |
 +----------------------+-------------+------------+-----------------------------------------------------------+
 
 .. rubric:: Protocol
