--- a/docs/source/protocols/gpio/_am2302.rst
+++ b/docs/source/protocols/gpio/_am2302.rst
@@ -79,9 +79,9 @@
 +--------------------+-------------+------------+-------------------------------------------------+
 | poll-interval      | 5           | seconds    | What should be the poll interval of the sensors |
 +--------------------+-------------+------------+-------------------------------------------------+
-| humidity-offset    | 0           | number     | Correct humidity value                          |
+| humidity-offset    | 0           | number     | Offset for correcting humidity value            |
 +--------------------+-------------+------------+-------------------------------------------------+
-| temperature-offset | 0           | number     | Correct temperature value                       |
+| temperature-offset | 0           | number     | Offset for correcting temperature value         |
 +--------------------+-------------+------------+-------------------------------------------------+
 
 :underline:`GUI Settings`
@@ -89,11 +89,11 @@
 +----------------------+-------------+------------+-----------------------------------------------------------+
 | **Setting**          | **Default** | **Format** | **Description**                                           |
 +----------------------+-------------+------------+-----------------------------------------------------------+
-| temperature-decimals | 1           | number     | How many decimals the GUIs should display for temperature |
+| temperature-decimals | 1           | number     | Number of decimal places to show for temperature          |
 +----------------------+-------------+------------+-----------------------------------------------------------+
-| humidity-decimals    | 1           | number     | How many decimals the GUIs should display for humidity    |
+| humidity-decimals    | 1           | number     | Number of decimal places to show for humidity             |
 +----------------------+-------------+------------+-----------------------------------------------------------+
-| show-temperature     | 1           | 1 or 0     | Don't display the temperature value                       |
+| show-temperature     | 1           | 1 or 0     | Whether to display the temperature value                  |
 +----------------------+-------------+------------+-----------------------------------------------------------+
-| show-humidity        | 1           | 1 or 0     | Don't display the humidity value                          |
+| show-humidity        | 1           | 1 or 0     | Whether to display the humidity value                     |
 +----------------------+-------------+------------+-----------------------------------------------------------+
