[Docs] bugfixed rsl366

--- a/docs/source/protocols/433.92/switch/_rsl366.rst
+++ b/docs/source/protocols/433.92/switch/_rsl366.rst
@@ -41,11 +41,11 @@
 
    {
      "devices": {
-       "dimmer": {
+       "switch": {
          "protocol": [ "promax" ],
          "id": [{
            "systemcode": 4,
-           "unitcode": 1
+           "programcode": 1
          }],
          "state": "off"
        }
