--- a/docs/source/protocols/433.92/weather/tfa2017.rst
+++ b/docs/source/protocols/433.92/weather/tfa2017.rst
@@ -22,7 +22,7 @@ TFA 2017
 +------------------------------------+----------------+
 | **Brand**                          | **Protocol**   |
 +------------------------------------+----------------+
-| Dostmann TFA 30.3208.02 (08/2017)  | tfa2017        |
+| Dostmann TFA 30.3208.02 (09/2017)  | tfa2017        |
 +------------------------------------+----------------+
 
 
@@ -93,7 +93,7 @@ TFA 2017
 
 .. rubric:: Protocol
 
-The protocol is similar to the F007TH as described in `this document <http://www.osengr.org/WxShield/Downloads/Weather-Sensor-RF-Protocols.pdf>` starting at page 13.
+The protocol is similar to the F007TH as described in `this document <http://www.osengr.org/WxShield/Downloads/Weather-Sensor-RF-Protocols.pdf>`_ starting at page 13. The protocol seems to be used in the TFA Dostmann sensors from revision 09/2017 (thus the name) and also in an identical sensor distributed by wetterladen.de.
 
 The protocol sends a message of 48 bits length in Manchester encoding. The clock is about 500, so everything below 750 is considered a short pulse. The message is always sent three consecutive times. The most reliable way to find at least the second and the third message is to look for sequence of 20 short pulses and the skip the next two long pulses and then start decoding the machester encoding until you have 48 bits.
 The current implementation does not use the checksum to validate the message but simply checks whether there are two identical messages in the pulse train which are then considered valid.
@@ -118,6 +118,7 @@ The structure of an example message can be seen below:
 - The fixed id seems always to be 0x45.
 - The rolling code changes on every battery change.
 - Bit 16 may encode the battery status but this is not known.
+- There is an `implementation of a checksum algorithm <https://github.com/adilosa/weathermon/blob/master/weathermon.c>`_ used in F007TH available but it is possibly different from the one used here and thus not used in this implementation.
 - The ``Channel`` is defined as a binary number (zero based), in the output it is 1 based.
 - The ``Temperature`` is defined as a binary number and represents the temperature in Fahrenheit, with an offset of 40°F. Assuming that the Temp binary value is T, the formula to calculate the temperature value in °C is
 
