Add title for docu

--- a/docs/source/protocols/433.92/contact/hs2241pt.rst
+++ b/docs/source/protocols/433.92/contact/hs2241pt.rst
@@ -4,6 +4,9 @@
 .. role:: underline
    :class: underline
 
+HS2441PT Contact
+================
+
 +------------------+-------------+
 | **Feature**      | **Support** |
 +------------------+-------------+
